syntax = "proto3";

package user_service;

option go_package = "./pb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUserByID (IDRequest) returns (UserResponse);
    rpc GetAllUsers (EmptyRequest) returns (UsersResponse);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string name = 3;
    string email = 4;
    string role = 5;
}

message CreateUserResponse {
    string userID = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message IDRequest {
    string id = 1;
}

message UserResponse {
    string userID = 1;
    string username = 2;
    string name = 3;
    string email = 4;
    string role = 5;
}

message EmptyRequest {}

message UsersResponse {
    repeated UserResponse users = 1;
}